@@ -12,6 +12,7 @@
 			<label index="userProfile">User Profile</label>
 			<label index="userProfile.image">Image</label>
 			<label index="userProfile.personalInformation">Personal Information</label>
+			<label index="userProfile.profileActions">Profile Actions</label>
 			<label index="groupProfile">Group Profile</label>
 			<label index="groupProfile.image">Image</label>
 			<label index="groupProfile.information">Information</label>
