@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>module</type>
+		<description>Language labels for the user profile's profile actions widget</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="action.addAsFriend">Add %s as a Friend</label>
+			<label index="action.isFriendWith">You're Friends with %s</label>
+		</languageKey>
+	</data>
+</T3locallang>
