@@ -1,0 +1,25 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Template for the user profile's profile actions widget</title>
+</head>
+<body>
+
+<!-- ###PROFILE_ACTIONS### begin -->
+
+<ul>
+	<!-- ###LOOP:PROFILEACTIONS### begin -->
+	<!-- ###LOOP_CONTENT### -->
+	<li>
+		###PROFILEACTION.LINK###
+	</li>
+	<!-- ###LOOP_CONTENT### -->
+	<!-- ###LOOP:PROFILEACTIONS### end -->
+</ul>
+
+<!-- ###PROFILE_ACTIONS### end -->
+
+</body>
+</html>
